# dna-agents

./: .env.template  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  EVALS.md  README.md  pyproject.toml
.claude-plugin/: mcp.json  plugin.json
.claude/agents/: module-creator.md  paper-scout.md  pgs-module-creator.md  pgx-module-creator.md  researcher.md  reviewer.md
.claude/workflows/: create-module.js  create-pgs-module.js  create-pgx-module.js  eval-module.js
.cursor/commands/: create-module.md  paper-scout.md
.cursor/rules/: dna-agents-critical.mdc  just-dna-agents-critical.mdc  module-creation.mdc
commands/: create-module.md  create-pgs-module.md  create-pgx-module.md  paper-scout.md
data/evals/cyp_panel/: variants.csv
data/evals/sirtuin_longevity/: freeform_input.md  module_spec.yaml  studies.csv  variants.csv
dna-agents/: pyproject.toml
dna-agents-mcp/: pyproject.toml
dna-agents-mcp/src/dna_agents_mcp/: cli.py  config.py  server.py
dna-agents-mcp/src/dna_agents_mcp/.agents/skills/dna-agents-mcp/: SKILL.md
dna-agents/src/dna_agents/: __init__.py  cli.py  compiler.py  eval_scorer.py  modules.py  resolver.py
dna-agents/src/dna_agents/.agents/skills/dna-agents/: SKILL.md
docs/: BACKLOG.md  module-creation-guide.md
just-dna-agents/: pyproject.toml
just-dna-agents-mcp/: pyproject.toml
just-dna-agents-mcp/src/just_dna_agents_mcp/: cli.py  config.py  server.py
just-dna-agents-mcp/src/just_dna_agents_mcp/.agents/skills/just-dna-agents-mcp/: SKILL.md
just-dna-agents/src/just_dna_agents/: __init__.py  cli.py  papers.py  resolver.py
just-dna-agents/src/just_dna_agents/.agents/skills/just-dna-agents/: SKILL.md
skills/module-authoring/: SKILL.md
tests/: conftest.py  test_agent_evals.py  test_eval_scorer.py  test_module_compiler.py  test_module_roundtrip.py  test_papers.py  test_plugin_metadata.py  test_smoke.py
tests/fixtures/evals/lactose_tolerance/: module_spec.yaml  studies.csv  variants.csv
