[project]
name = "dna-agents-workspace"
version = "0.3.0"
description = "DNA annotation agents workspace"
requires-python = ">=3.14"
dependencies = [
    "just-dna-registry>=0.9.1",
]

[tool.uv.workspace]
members = ["dna-agents", "dna-agents-mcp"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
dna-agents = { workspace = true }
dna-agents-mcp = { workspace = true }

[dependency-groups]
dev = [
    "dna-agents",
    "dna-agents-mcp",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring external resources (Ensembl DuckDB, HuggingFace, API keys)",
    "agent_eval: agent evaluation tests requiring claude CLI and Claude Code subscription",
]
