[project]
name = "dna-agents-mcp"
version = "0.1.0"
description = "MCP server for DNA module compiler tools"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dna-agents",
    "fastmcp[tasks]>=3.4.2",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "typer>=0.26.8",
]

[project.scripts]
dna-agents-mcp = "dna_agents_mcp.cli:app"

[tool.uv.sources]
dna-agents = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
