[project]
name = "dna-agents"
version = "0.2.0"
description = "Module compiler and agent definitions for DNA annotation"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "duckdb>=1.5.4",
    "typer>=0.26.8",
    "rich>=15.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
dna-agents = "dna_agents.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
