[project]
name = "dna-agents"
version = "0.4.0"
description = "Module compiler and agent definitions for DNA annotation"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "just-dna-format>=0.4.0",
    "just-dna-compiler>=0.4.0",
    "huggingface-hub>=0.27.0",
    "polars>=1.42.1",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
    "rich>=15.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
dna-agents = "dna_agents.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
